--- a/src/shared/ui/TextField/TextFiled.module.css
+++ b/src/shared/ui/TextField/TextFiled.module.css
@@ -1,5 +1,6 @@
 .wrapper {
     display: flex;
+    flex: 1;
     width: 100%;
     align-items: flex-end;
     height: 48px;
@@ -20,5 +21,21 @@
 }
 
 .label {
+    display: flex;
+    align-items: center;
+    flex: 1;
     width: 100%;
+}
+
+.saveButton {
+    position: absolute;
+    width: 52px !important;
+    height: 24px !important;
+    right: 12px;
+    bottom: 5px;
+}
+
+.error {
+    position: absolute;
+    bottom: -22px;
 }
