--- a/src/shared/ui/TextField/TextField.module.css
+++ b/src/shared/ui/TextField/TextField.module.css
@@ -1,17 +1,22 @@
+.wrapperWrapper {
+    width: 100%;
+    height: 48px;
+}
+
 .wrapper {
+    position: relative;
+    height: 48px;
     display: flex;
     flex: 1;
     width: 100%;
     align-items: flex-end;
-    height: 48px;
-    position: relative;
 }
 
 .span {
-    color: transparent;
-    transform: scale(0);
     position: absolute;
     top: -1px;
+    color: transparent;
+    transform: scale(0);
     transition: 0.2s ease-in;
 }
 
