--- a/src/widgets/ProfileInfo/PageInfo.module.css
+++ b/src/widgets/ProfileInfo/PageInfo.module.css
@@ -1,38 +1,37 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    column-gap: 12px;
-    height: 60px;
-    transition: 0.25s ease-in;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  height: 60px;
+  transition: 0.25s ease-in;
+  cursor: pointer;
 }
 
 .span {
-    user-select: none;
-    cursor: pointer;
-    line-height: 60px;
-    transition: 0.2s ease-in;
+  user-select: none;
+  cursor: pointer;
+  line-height: 60px;
+  transition: 0.2s ease-in;
 }
 
 .span:hover {
-    color: #366EFF;
+  color: #366eff;
 }
 
-
 .wrapper:hover {
-    color: #007aff;
+  color: #007aff;
 }
 
 .modal {
-    opacity: 0;
-    position: absolute;
-    top: 63px;
-    right: 145px;
-    transition: 0.2s ease-in;
+  opacity: 0;
+  position: absolute;
+  top: 63px;
+  right: 145px;
+  transition: 0.2s ease-in;
 }
 
 .showModal {
-    opacity: 1;
-    top: 63px;
-    right: 145px;
+  opacity: 1;
+  top: 63px;
+  right: 145px;
 }
