--- a/src/shared/ui/Pagination/Pagination.module.css
+++ b/src/shared/ui/Pagination/Pagination.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-items: center;
     column-gap: 30px;
+    height: 24px;
 }
 
 .selectWrapper {
@@ -21,6 +22,7 @@
 
 .ul {
     display: flex;
+    height: 24px;
 }
 
 .ul > li {
@@ -34,6 +36,7 @@
     cursor: pointer;
     height: 24px;
     width: 24px !important;
+    font-size: 16px;
 }
 
 .ul > li:hover {
@@ -52,5 +55,9 @@
 
 .ul > li.active {
     background-color: #366EFF;
+    color: white;
+}
+
+.ul > li.active > a {
     color: white;
 }
