--- a/src/widgets/Select/Select.module.css
+++ b/src/widgets/Select/Select.module.css
@@ -28,13 +28,13 @@
 .list {
     margin-top: 5px;
     position: absolute;
-    top: -130px;
+    top: -108px;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 39px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
     background-color: #f9f9fa;
 }
 
@@ -48,6 +48,7 @@
     font-weight: 400;
     cursor: pointer;
     font-size: 14px;
+    padding: 5px;
 }
 
 .family {
