--- a/src/widgets/Pagination/Pagination.module.css
+++ b/src/widgets/Pagination/Pagination.module.css
@@ -1,64 +1,64 @@
 .paginateWrapper {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    column-gap: 30px;
-    height: 24px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  column-gap: 30px;
+  height: 24px;
 }
 
 .selectWrapper {
-    user-select: none;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    column-gap: 5px;
-    font-weight: 500;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  column-gap: 5px;
+  font-weight: 500;
 }
 
 .prev {
-    width: 37px;
-    height: 24px;
+  width: 37px;
+  height: 24px;
 }
 
 .ul {
-    display: flex;
-    column-gap: 10px;
-    height: 24px;
+  display: flex;
+  column-gap: 10px;
+  height: 24px;
 }
 
 .ul > li {
-    font-weight: 500;
-    display: inline-block;
-    flex: 1;
-    text-align: center;
-    margin-bottom: 0;
-    border-radius: 2px;
-    user-select: none;
-    cursor: pointer;
-    height: 24px;
-    width: 37px !important;
-    font-size: 16px;
+  font-weight: 500;
+  display: inline-block;
+  flex: 1;
+  text-align: center;
+  margin-bottom: 0;
+  border-radius: 2px;
+  user-select: none;
+  cursor: pointer;
+  height: 24px;
+  width: 37px !important;
+  font-size: 16px;
 }
 
 .ul > li:hover {
-   background-color: rgba(187, 187, 187, 0.2);
+  background-color: rgba(187, 187, 187, 0.2);
 }
 
 .ul > li > a {
-    display: inline-block;
-    text-align: center;
-    line-height: 24px;
-    flex: 1;
-    justify-content: center;
-    height: 24px;
-    width: 37px !important;
+  display: inline-block;
+  text-align: center;
+  line-height: 24px;
+  flex: 1;
+  justify-content: center;
+  height: 24px;
+  width: 37px !important;
 }
 
 .ul > li.active {
-    background-color: #366EFF;
-    color: white;
+  background-color: #366eff;
+  color: white;
 }
 
 .ul > li.active > a {
-    color: white;
+  color: white;
 }
