--- a/src/widgets/Modal/ui/Modal/Modal.module.css
+++ b/src/widgets/Modal/ui/Modal/Modal.module.css
@@ -14,11 +14,12 @@
 
 .cross {
   position: absolute;
-  right: 34px;
+  right: 26px;
   top: 23px;
   width: 14px;
   height: 14px;
   opacity: 1;
+  cursor: pointer;
 }
 
 .cross:hover {
@@ -28,7 +29,6 @@
 .cross:before,
 .cross:after {
   position: absolute;
-  left: 15px;
   content: ' ';
   height: 14px;
   width: 1px;
