--- a/src/widgets/Modal/ui/Modal/Modal.module.css
+++ b/src/widgets/Modal/ui/Modal/Modal.module.css
@@ -1,44 +1,34 @@
 .popup {
   background: #fff;
-  border: 1px solid black;
   width: 395px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 59px -16px rgba(0, 0, 0, 0.34);
 }
 
 .popup__title {
-  padding: 19px 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 24px;
+  height: 60px;
   border-bottom: 1px solid #d9d9d9;
   margin-bottom: 35px;
   width: 100%;
   position: relative;
 }
 
-.cross {
-  position: absolute;
-  right: 26px;
-  top: 23px;
-  width: 14px;
-  height: 14px;
-  opacity: 1;
+.crossBtn {
+  background: none;
   cursor: pointer;
+  transition: 0.1s ease-in;
 }
 
-.cross:hover {
-  opacity: 0.3;
+.crossBtn:hover > svg {
+  opacity: 0.6;
 }
 
-.cross:before,
-.cross:after {
-  position: absolute;
-  content: ' ';
-  height: 14px;
-  width: 1px;
-  background-color: #000;
-}
-
-.cross:before {
-  transform: rotate(45deg);
-}
-
-.cross:after {
-  transform: rotate(-45deg);
+.title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
 }
